# TiRa-RouteOptimizer

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml  performance.yml
documentation/: implementation.md  specifications.md  testing.md  user_guide.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: main.js
src/: app.py  main.py
src/algorithms/: a_star.py  fringe_search.py
src/tests/: a_star_test.py  fringe_search_test.py  graph_utils_test.py  osm_utils_test.py
src/tests/integration/: a_star_vs_dijkstra_osmnx_test.py  fringe_search_vs_dijkstra_osmnx_test.py
src/tests/performance/: algorithms_performance_test.py
src/tests/unit/: a_star_test.py  fringe_search_test.py  graph_utils_test.py
src/utils/: graph_utils.py  osm_utils.py
