[tool.poetry]
name = "tira-routeoptimizer"
version = "0.1.0"
description = ""
authors = ["Sampsa Oinonen <sampsa.oinonen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
osmnx = "^1.9.4"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
