[tool.poetry]
name = "tira-routeoptimizer"
version = "0.1.0"
description = ""
authors = ["Sampsa Oinonen <sampsa.oinonen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
osmnx = "^1.9.4"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
networkx = "^3.3"
flask = "^3.0.3"
invoke = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"
pylint = "^3.3.0"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
